# FormatFactory

./: CMakeLists.txt  PKGBUILD  README.md  formatfactory.desktop  mainwindow.cpp  mainwindow.h
